<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_title"></include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginTop="10dip"
                android:layout_marginRight="10dip"
                android:background="@drawable/bg_r10_white"
                android:padding="15dip">

                <ImageView
                    android:id="@+id/iv_lc_ico_bs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@mipmap/logout_warning"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/tv_lc_ts_content1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="20dip"
                    android:textColor="@color/color_545454"
                    android:textSize="16sp"
                    android:text="@string/lc_con2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_lc_ico_bs"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="20dip"
                    android:text="@string/lc_con1"
                    android:textColor="@color/color_9c9c9c"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_lc_ts_content1"
                    tools:ignore="MissingConstraints" />
            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginTop="10dip"
                android:layout_marginRight="10dip"
                android:background="@drawable/bg_r10_white"
                android:padding="15dip">

                <TextView
                    android:id="@+id/tv_lc_sm_title1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="15dip"
                    android:text="@string/lc_con3"
                    android:textColor="@color/color_545454"
                    android:textSize="16sp"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/tv_lc_reason"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="10dip"
                    android:lineSpacingExtra="5dp"
                    android:textColor="@color/color_9c9c9c"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_lc_sm_title1"
                    tools:ignore="MissingConstraints" />
            </android.support.constraint.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>